Update to Integrator and Documenting Indexes
Update to remove includes and add TOC to all sub docs

Mass edit of all docs to set [source] tags before source sections
A lot of legacy docs did not use them and code was not displaying
in highlight

Fix missing :ignore-front-matter: tag to 2 documents which were not being
rendered at all

Change source highlighter to more muted yellow/green shade

Adjust the [NOTE] bar colours (improved but not there yet)

Remove some references to distro CD etc from legacy LCNC docs

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/common/Integrator_Concepts.asciidoc
+++ b/docs/common/Integrator_Concepts.asciidoc
@@ -6,7 +6,7 @@
 :imagesdir: /docs/common/images
 
 = Integrator Concepts
-
+:toc:
 [[cha:integrator-concepts]] (((Integrator Concepts)))
 
 == Stepper Systems
