--- a/docs/config/ini_homing.asciidoc
+++ b/docs/config/ini_homing.asciidoc
@@ -6,7 +6,7 @@
 :imagesdir: /docs/config/images
 
 = Homing Configuration
-
+:toc:
 [[cha:homing-configuration]] (((Homing Configuration)))
 
 == Overview
