--- a/docs/drivers/hostmot2.asciidoc
+++ b/docs/drivers/hostmot2.asciidoc
@@ -68,6 +68,7 @@ all the PCI- and PC-104/Plus-based Anything I/O boards). The hostmot2 driver
 must be loaded first, using a HAL command like this:
 
 ----
+[source]
 loadrt hostmot2 
 ----
 
@@ -77,7 +78,7 @@ The hostmot2 driver by itself does nothing, it needs access to actual
 boards running the HostMot2 firmware. The low-level I/O drivers provide
 this access. The low-level I/O drivers are loaded with commands like
 this:
-
+[source]
 ----
 loadrt hm2_pci config="firmware=hm2/5i20/SVST8_4.BIT 
        num_encoders=3 num_pwmgens=3 num_stepgens=1"
@@ -171,6 +172,7 @@ how many of the available encoders, pwmgens, and stepgens are used. To
 get a pinout list for your configuration after loading Machinekit in the
 terminal window type:
 
+[source]
 ----
 dmesg > hm2.txt
 ----
@@ -181,6 +183,7 @@ the pinout for the HostMot2 and any error and warning messages.
 To reduce the clutter by clearing the message buffer before loading
 Machinekit type the following in the terminal window:
 
+[source]
 ----
 sudo dmesg -c
 ----
@@ -195,6 +198,7 @@ your configuration.
 
 An example of a 5i20 configuration:
 
+[source]
 ----
 [HOSTMOT2] 
 DRIVER=hm2_pci 
@@ -204,6 +208,7 @@ CONFIG="firmware=hm2/5i20/SVST8_4.BIT num_encoders=1 num_pwmgens=1 num_stepgens=
 
 The above configuration produced this printout.
 
+[source]
 ----
 [ 1141.053386] hm2/hm2_5i20.0: 72 I/O Pins used: 
 [ 1141.053394] hm2/hm2_5i20.0: IO Pin 000 (P2-01): IOPort 
@@ -245,6 +250,7 @@ and PWMGen will also show up as GPIOs in the HAL Configuration screen.
 The default pinout is described in a .PIN file (human-readable text). 
 When you install a firmware package the .PIN files are installed in 
 
+[source]
 ----
 /usr/share/doc/hostmot2-firmware-<board>/ 
 ----
@@ -777,6 +783,7 @@ If you like to roll your own configuration the following examples show how
 to load the drivers in the HAL file.
 
 .5i25 + 7i76 Card
+[source]
 ----
 # load the generic driver
 loadrt hostmot2
@@ -786,6 +793,7 @@ loadrt hm2_pci config="num_encoders=1 num_stepgens=5 sserial_port_0=0XXX"
 ----
 
 .5i25 + 7i77 Card
+[source]
 ----
 # load the generic driver
 loadrt hostmot2
