--- a/docs/gui/gmoccapy.asciidoc
+++ b/docs/gui/gmoccapy.asciidoc
@@ -132,6 +132,7 @@ settings will not be mixed if you use several configs. If you only want to use
 one file for several machines, you need to include PREFERENCE_FILE_PATH in your
 INI.
 
+[source]
 ----
 DEFAULT_LINEAR_VELOCITY = 166.666
 ----
@@ -146,6 +147,7 @@ value max linear velocity (60).
 If you don't set max velocity in TRAJ, it may be reduced as well see
 <<gmoccapy:traj-section,TRAJ section>>
 
+[source]
 ----
 MAX_LINEAR_VELOCITY = 166.666
 ----
@@ -154,6 +156,7 @@ Sets the value of the max velocity for jogging in machine units per second.
 
 [NOTE] If no value is given, a value of 60 will be applied.
 
+[source]
 ----
 MAX_FEED_OVERRIDE = 1.5
 ----
@@ -161,6 +164,7 @@ MAX_FEED_OVERRIDE = 1.5
 Sets the maximum feed override, in the example given, you will be allowed to
 override the feed by 150%.
 
+[source]
 ----
 MAX_SPINDLE_OVERRIDE = 1.2
 MIN_SPINDLE_OVERRIDE = 0.5
@@ -168,6 +172,7 @@ MIN_SPINDLE_OVERRIDE = 0.5
 
 Will allow you to change the spindle override within a limit from 50% to 120%.
 
+[source]
 ----
 LATHE = 1
 BACK_TOOL_LATHE = 1
@@ -200,6 +205,7 @@ http://www.linuxcnc.org/docs/html/gui/gladevcp.html[Glade VCP]
 
 .Example
 
+[source]
 ----
  EMBED_TAB_NAME = DRO
  EMBED_TAB_LOCATION = ntb_user_tabs
@@ -238,6 +244,7 @@ See the different INI files included to see the differences
 
 * EMBED_TAB_COMMAND = the command to execute, i.e.
 
+[source]
 ----
 gladevcp -x {XID} dro.glade
 ----
@@ -245,6 +252,7 @@ gladevcp -x {XID} dro.glade
 Includes a custom glade file called dro.glade in the mentioned location
 The file must be placed in the config folder of your machine.
 
+[source]
 ----
 gladevcp h_buttonlist.glade
 ----
@@ -253,6 +261,7 @@ Will just open a new user window called h_buttonlist.glade note the difference,
 this one is stand alone, and can be moved around independent from gmoccapy
 window.
 
+[source]
 ----
 camview-emc -w {XID}
 ----
@@ -261,6 +270,7 @@ Will add a live image from a web cam to the location you specified. Take care
 that camview-emc is installed, as it is not by default. Detailed information
 for camview and linuxcnc at: http://psha.org.ru/b/camview-emc.html[cam view]
 
+[source]
 ----
 gladevcp -c gladevcp -u hitcounter.py -H manual-example.hal manual-example.ui
 ----
@@ -300,6 +310,7 @@ in the [DISPLAY] section of the INI file.
 Here is how to set up 3 user pop up message dialogs the messages support pango markup language.
 Detailed information about the markup language can be found at https://developer.gnome.org/pango/stable/PangoMarkupFormat.html[Pango Markup]
 
+[source]
 ----
 MESSAGE_TEXT    = The text to be displayed, may be pango markup formated
 MESSAGE_TYPE    = "status" , "okdialog" , "yesnodialog"
@@ -319,6 +330,7 @@ MESSAGE_PINNAME = is the name of the hal pin group to be created
    The response Hal Pin will remain 1 until the dialog is called again
 
 .Example
+[source]
 ----
 MESSAGE_TEXT = This is a <span background="#ff0000" foreground="#ffffff">
 info-message</span> test
@@ -341,6 +353,7 @@ The specific hal pin conventions for these can be found under the
 
 === The RS274NGC Section
 
+[source]
 ----
 [RS274NGC]
 SUBROUTINE_PATH = macros
@@ -356,6 +369,7 @@ You can add macros to gmoccapy, similar to touchy's way. A macro is nothing
 else than a ngc-file. You are able to execute complete CNC programs in MDI
 mode, by just pushing one button. To do so, you have to add a section like so:
 
+[source]
 ----
 [MACROS]
 MACRO = i_am_lost
@@ -395,6 +409,7 @@ sim folder.
 
 Gmoccapy will also accept macros asking for parameters like:
 
+[source]
 ----
 go_to_position X-pos Y-pos Z-pos
 ----
@@ -402,6 +417,7 @@ go_to_position X-pos Y-pos Z-pos
 The parameters must be separated by spaces. This calls a file
 'go_to_position.ngc' with the following content:
 
+[source]
 ----
 ; Test file go to position
 ; will jog the machine to a given position
@@ -438,6 +454,7 @@ image::gmoccapy_getting_macro_info.png[align="left"]
 
 === The TRAJ Section
 
+[source]
 ----
 MAX_VELOCITY = 230.000
 ----
@@ -545,6 +562,7 @@ button state, it will lead to different slider scales depending on the mode
 details.
 
 .Example
+[source]
 ----
 Spindle Override Min Value =  20 %
 Spindle Override Max Value = 120 %
@@ -663,6 +681,7 @@ All are HAL_BIT pin.
 To add user created message you need to add the message to the INI file in the
 [DISPLAY] section. Here are a couple of examples.
 
+[source]
 ----
 MESSAGE_BOLDTEXT = LUBE SYSTEM FAULT
 MESSAGE_TEXT = LUBE FAULT
@@ -679,6 +698,7 @@ To 'connect' new pins to and input you need to do this in the postgui HAL file.
 Here are some example connections that have the signal connected to an input
 some place else in the HAL file.
 
+[source]
 ----
 net gmoccapy-lube-fault gmoccapy.messages.lube-fault
 net gmoccapy-lube-fault-waiting gmoccapy.messages.lube-fault-waiting
@@ -732,6 +752,7 @@ image::manual-tool-change.png[align="left"]
 
 Usually they are connected like this for a manual tool change:
 
+[source]
 ----
 net tool-change gmoccapy.toolchange-change <= iocontrol.0.tool-change
 net tool-changed gmoccapy.toolchange-changed <= iocontrol.0.tool-changed
@@ -752,6 +773,7 @@ image::gmoccapy_0_9_7_tool_info.png[align="left"]
 
 Connect them in your postgui hal.
 
+[source]
 ----
  net tooloffset-x gmoccapy.tooloffset-x <= motion.tooloffset.x
  net tooloffset-z gmoccapy.tooloffset-z <= motion.tooloffset.z
@@ -821,6 +843,7 @@ Modify your INI File to include the following:
 
 .The RS274NGC section
 
+[source]
 ----
 [RS274NGC]
 # Enables the reading of INI and HAL values from gcode
@@ -839,6 +862,7 @@ The position of the tool sensor and the start position of the probing movement,
 all values are absolute coordinates, except MAXPROBE, what must be given in
 relative movement.
 
+[source]
 ----
 [TOOLSENSOR]
 X = 10
@@ -853,6 +877,7 @@ This is not named TOOL_CHANGE_POSITION  on purpose - canon uses that name and
 will interfere otherwise. The position to move the machine before giving the
 change tool command. All values are in absolute coordinates.
 
+[source]
 ----
 [CHANGE_POSITION]
 X = 10
@@ -864,6 +889,7 @@ Z = -2
 
 The Python plug ins serves interpreter and task.
 
+[source]
 ----
 [PYTHON]
 # The path to start a search for user modules
@@ -891,6 +917,7 @@ copy 'change.ngc' to the directory specified as SUBROUTINE_PATH see
 Open 'change.ngc' with a editor and uncomment the following lines
 (49 and 50):
 
+[source]
 ----
 F #<_hal[gmoccapy.probevel]>
 G38.2 Z-4
@@ -902,18 +929,21 @@ You may want to modify this file to fit more your needs.
 
 Connect the tool probe in your hal file like so:
 
+[source]
 ----
 net probe  motion.probe-input <= <your_input_pin>
 ----
 
 The line might look like this:
 
+[source]
 -------
  net probe  motion.probe-input <= parport.0.pin-15-in
 -------
 
 In your postgui.hal file add:
 
+[source]
 -------
 # The next lines are only needed if the pins had been connected before
 unlinkp iocontrol.0.tool-change
@@ -989,6 +1019,7 @@ onboard it can be solved with a small batch file with the following content:
 If this section is not sensitive, you have not installed a virtual keyboard,
 + supported are 'onboard' and 'matchbox-keyboard'.
 
+[source]
 ----
  #!/bin/bash
  setxkbmap -model pc105 -layout de -variant basic
@@ -998,6 +1029,7 @@ The letters "de" are for German, you will have to set them according to your
 locale settings. Just execute this file before starting LinuxCNC, it can be
 done also adding a starter to your local folder.
 
+[source]
 ----
 ./config/autostart
 ----
@@ -1155,6 +1187,7 @@ limits from 50 to 120 % so he goes from min to max within 70 impulses, meaning n
 
 By default all scales are set using the calculation:
 
+[source]
 ----
 (MAX - MIN)/100
 ----
@@ -1208,6 +1241,7 @@ the INFO frame on the main screen. It is no error giving wrong values. If you
 give a maximum of 2000 and your spindle makes 4000 rpm, only the bar level will
 be wrong on higher speeds than 2000 rpm.
 
+[source]
 ----
 default values are
 MIN = 0
