--- a/docs/hal/tutorial.asciidoc
+++ b/docs/hal/tutorial.asciidoc
@@ -24,6 +24,7 @@ running 'HAL'. The terminal window is in 'Applications/Accessories'
 from the main Debian menu bar.
 
 .Terminal Command Example
+[source]
 ----
 me@computer:~machinekit$ halrun
 (will be shown like the following line)
@@ -42,6 +43,7 @@ identifiers. You will have to type enough letters for a unique match.
 Try pressing tab after starting a HAL command:
 
 .Tab Completion
+[source]
 ----
 halcmd: loa<TAB>
 halcmd: load
@@ -83,6 +85,7 @@ following command from a terminal window:
 // NOTE! add link to rip-environment explanation
 
 .Loading HAL
+[source]
 ----
 cd machinekit
 halrun
@@ -102,6 +105,7 @@ It is a realtime component, implemented as a Linux kernel module. To
 load 'siggen' use the HAL command 'loadrt'.
 
 .Loading siggen
+[source]
 ----
 halcmd: loadrt siggen
 ----
@@ -117,6 +121,7 @@ halcmd feature is the 'show' command. This command displays information
 about the current state of the HAL. To show all installed components:
 
 .Show Components
+[source]
 ----
 halcmd: show comp
 
@@ -138,6 +143,7 @@ it is a user space component.
 Next, let's see what pins 'siggen' makes available:
 
 .Show Pins
+[source]
 ----
 halcmd: show pin
 
@@ -163,6 +169,7 @@ contained within the component, some the pins have a value of zero.
 The next step is to look at parameters:
 
 .Show Parameters
+[source]
 ----
 halcmd: show param
 
@@ -190,6 +197,7 @@ the realtime code they contain. Let's see what function(s) 'siggen'
 exported:
 
 .Show Functions
+[source]
 ----
 halcmd: show funct
 
@@ -209,6 +217,7 @@ we need a realtime thread. The component called 'threads' that is used
 to create a new thread. Lets create a thread called 'test-thread' with
 a period of 1 ms (1,000 us or 1,000,000 ns):
 
+[source]
 ----
 halcmd: loadrt threads name1=test-thread period1=1000000
 ----
@@ -216,6 +225,7 @@ halcmd: loadrt threads name1=test-thread period1=1000000
 Let's see if that worked:
 
 .Show Threads
+[source]
 ----
 halcmd: show thread
 
@@ -230,6 +240,7 @@ correct rate, and which can handle floating point functions. The next
 step is to connect the function to the thread:
 
 .Add Function
+[source]
 ----
 halcmd: addf siggen.0.update test-thread
 ----
@@ -241,6 +252,7 @@ told 'halcmd' to add the function 'siggen.0.update' to the thread
 'test-thread', and if we look at the thread list again, we see that it
 succeeded:
 
+[source]
 ----
 halcmd: show thread
 
@@ -257,12 +269,14 @@ completely configure the system before the realtime code starts. Once
 you are happy with the configuration, you can start the realtime code
 like this:
 
+[source]
 ----
 halcmd: start
 ----
 
 Now the signal generator is running. Let's look at its output pins:
 
+[source]
 ----
 halcmd: show pin
 
@@ -281,6 +295,7 @@ Owner   Type  Dir         Value  Name
 
 And let's look again: 
 
+[source]
 ----
 halcmd: show pin
 
@@ -311,11 +326,13 @@ change the amplitude
 of the signal generator from 1.0 to 5.0:
 
 .Set Pin
+[source]
 ----
 halcmd: setp siggen.0.amplitude 5
 ----
 
 .Check the parameters and pins again
+[source]
 ----
 halcmd: show param
 
@@ -355,6 +372,7 @@ commands every time we want to use the system. We can save the
 configuration of the entire HAL with a single command:
 
 .Save
+[source]
 ----
 halcmd: save
 # components 
@@ -377,6 +395,7 @@ for later use, we simply
 redirect the output to a file:
 
 .Save to a file
+[source]
 ----
 halcmd: save all saved.hal
 ----
@@ -389,6 +408,7 @@ session. Do not simply close the terminal window without shutting down
 the HAL session.
 
 .Exit HAL
+[source]
 ----
 halcmd: exit
 ----
@@ -401,6 +421,7 @@ which reads commands from a file, and '-I' (upper case i) which shows
 the halcmd prompt after executing the commands:
 
 .Run a Saved File
+[source]
 ----
 halrun -I -f saved.hal
 ----
@@ -415,6 +436,7 @@ unload HAL before another session can begin. To do this type the
 following command in a terminal window.
 
 .Removing HAL
+[source]
 ----
 halrun -U
 ----
@@ -431,6 +453,7 @@ We will use the siggen component again to check out halmeter. If you
 just finished the previous example, then you can load siggen using the
 saved file. If not, we can load it just like we did before:
 
+[source]
 ----
 halrun
 halcmd: loadrt siggen
@@ -444,6 +467,7 @@ At this point we have the siggen component loaded and running. It's
 time to start halmeter.
 
 .Starting Halmeter
+[source]
 ----
 halcmd: loadusr halmeter
 ----
@@ -490,6 +514,7 @@ Before we can begin building this new example, we want to start with a
 clean slate. If you just finished one of the previous examples, we need
 to remove the all components and reload the RTAPI and HAL libraries.
 
+[source]
 ----
 halcmd: exit
 ----
@@ -502,6 +527,7 @@ Integrator Manual. In this example we will use the 'velocity' control
 type of stepgen.  For now, we can skip the details, and just run the
 following commands.
 
+[source]
 ----
 halrun 
 halcmd: loadrt stepgen step_type=0,0 ctrl_type=v,v
@@ -518,6 +544,7 @@ thread doesn't support floating point functions.
 As before, we can use 'halcmd show' to take a look at the HAL. This
 time we have a lot more pins and parameters than before:
 
+[source]
 ----
 halcmd: show pin
 
@@ -594,12 +621,14 @@ The first step is to connect the signal to the signal generator output.
 To connect a signal to a pin we use the net command.
 
 .net command
+[source]
 ----
 halcmd: net X-vel <= siggen.0.cosine
 ----
 
 To see the effect of the 'net' command, we show the signals again.
 
+[source]
 ----
 halcmd: show sig
 
@@ -614,6 +643,7 @@ direction of data flow - in this case, data flows from pin
 'siggen.0.cosine' to signal 'X-vel'. Now let's connect the 'X-vel' to
 the velocity input of a step pulse generator.
 
+[source]
 ----
 halcmd: net X-vel => stepgen.0.velocity-cmd
 ----
@@ -624,6 +654,7 @@ to the input of the second step pulse generator. The following command
 accomplishes in one line what two 'net' commands accomplished for
 'X-vel'.
 
+[source]
 ----
 halcmd: net Y-vel siggen.0.sine => stepgen.1.velocity-cmd
 ----
@@ -631,6 +662,7 @@ halcmd: net Y-vel siggen.0.sine => stepgen.1.velocity-cmd
 Now let's take a final look at the signals and the pins connected to
 them.
 
+[source]
 ----
 halcmd: show sig
 
@@ -655,6 +687,7 @@ get things done. Thread are the method used to make those instructions
 run when they are needed. First let's look at the functions available
 to us.
 
+[source]
 ----
 halcmd: show funct
 
@@ -704,6 +737,7 @@ feedback, we don't need to run 'stepgen.capture_position' at all.
 We run functions by adding them to threads. Each thread runs at a
 specific rate. Let's see what threads we have available.
 
+[source]
 ----
 halcmd: show thread
 
@@ -722,6 +756,7 @@ We will use it for 'stepgen.make_pulses'. To connect the
 functions to the proper thread, we use the 'addf' command.
 We specify the function first, followed by the thread.
 
+[source]
 ----
 halcmd: addf siggen.0.update slow
 halcmd: addf stepgen.update-freq slow
@@ -731,6 +766,7 @@ halcmd: addf stepgen.make-pulses fast
 After we give these commands, we can run the 'show thread' command
 again to see what happened.
 
+[source]
 ----
 halcmd: show thread
 
@@ -765,6 +801,7 @@ exactly what the parameter 'stepgen.n.velocity-scale' is for. In this
 case, both the X and Y axis have the same scaling, so
 we set the scaling parameters for both to 10000.
 
+[source]
 ----
 halcmd: setp stepgen.0.position-scale 10000
 halcmd: setp stepgen.1.position-scale 10000
@@ -788,6 +825,7 @@ scaling parameter of the step pulse generator.
 We now have everything configured and are ready to start it up. Just
 like in the first example, we use the 'start' command.
 
+[source]
 ----
 halcmd: start
 ----
@@ -813,6 +851,7 @@ the first time you run halscope in a directory it gives a benign
 message that the file 'autosave.halscope' could not be opened.
 
 .Starting Halscope
+[source]
 ----
 halcmd: loadusr halscope
 halcmd: halscope: config file 'autosave.halscope' could not be opened
@@ -1005,6 +1044,7 @@ If you want to record more samples at once, restart realtime and load
 halscope with a numeric argument which indicates the number of samples
 you want to capture.
 
+[source]
 ----
 halcmd: loadusr halscope 80000
 ----
