--- a/docs/motion/tweaking_steppers.asciidoc
+++ b/docs/motion/tweaking_steppers.asciidoc
@@ -4,7 +4,7 @@
 :skip-front-matter:
 
 = Stepper Tuning
-
+:toc:
 [[cha:Stepper-Tuning]] (((Stepper Tuning)))
 
 == Getting the most out of Software Stepping
