--- a/docs/common/Linux_FAQ.asciidoc
+++ b/docs/common/Linux_FAQ.asciidoc
@@ -2,7 +2,7 @@
 ---
 
 :skip-front-matter:
-
+:source-highlighter: pygments
 = Linux FAQ 
 :toc:
 [[cha:linux-faq]] (((Linux FAQ)))
@@ -22,6 +22,7 @@ To view a man page open up a terminal window by going to 'Applications >
 Accessories > Terminal'. For example if you wanted to find out something
 about the find command in the terminal window type:
 
+[source,bash]
 ----
 man find
 ----
@@ -34,6 +35,7 @@ to quit viewing.
 Sometimes when troubleshooting you need to get a list of modules that
 are loaded. In a terminal window type:
 
+[source,bash]
 ----
 lsmod
 ----
@@ -41,6 +43,7 @@ lsmod
 If you want to send the output from lsmod to a text file in a terminal
 window type:
 
+[source,bash]
 ----
 lsmod > mymod.txt
 ----
@@ -67,6 +70,7 @@ Open up 'Applications > Accessories > Terminal'.
 
 In the terminal window type
 
+[source,bash]
 ----
 sudo gedit
 ----
@@ -98,6 +102,7 @@ foul things up as root if you don't know what you're doing.
 To find out the path to the present working directory in the terminal
 window type:
 
+[source,bash]
 ----
 pwd
 ----
@@ -108,12 +113,14 @@ pwd
 
 To move up one level in the terminal window type:
 
+[source,bash]
 ----
 cd ..
 ----
 
 To move up two levels in the terminal window type:
 
+[source,bash]
 ----
 cd ../..
 ----
@@ -121,6 +128,7 @@ cd ../..
 To move down to the emc2/configs subdirectory in the terminal window
 type:
 
+[source,bash]
 ----
 cd emc2/configs
 ----
@@ -131,12 +139,14 @@ cd emc2/configs
 
 To view a list of all the files and subdirectories in the terminal window type: 
 
+[source,bash]
 ----
 dir
 ----
 
 or
 
+[source,bash]
 ----
 ls
 ----
@@ -148,6 +158,7 @@ ls
 The find command can be a bit confusing to a new Linux user. The basic
 syntax is:
 
+[source,bash]
 ----
 find starting-directory parameters actions
 ----
@@ -156,18 +167,21 @@ For example to find all the .ini files in your emc2 directory you
 first need to use the pwd command to find out the directory. +
 Open a new terminal window and type:
 
+[source,bash]
 ----
 pwd
 ----
 
 And pwd might return the following result: 
 
+[source,bash]
 ----
 /home/joe
 ----
 
 With this information put the command together like this:
 
+[source,bash]
 ----
 find /home/joe/machinekit -name \*.ini -print
 ----
@@ -182,6 +196,7 @@ man page for more information on find.
 
 (((Searching for Text)))(((grep)))
 
+[source,bash]
 ----
 grep -irl 'text to search for' *
 ----
@@ -201,6 +216,7 @@ To view the bootup messages use "dmesg" from the command window. To
 save the bootup messages to a file use the redirection operator, like
 this:
 
+[source,bash]
 ----
 dmesg > bootmsg.txt
 ----
@@ -210,6 +226,7 @@ with people trying to help you diagnose your problem.
 
 To clear the message buffer type this:
 
+[source,bash]
 ----
 sudo dmesg -c
 ----
@@ -222,6 +239,7 @@ out of dmesg.
 
 After boot up open a terminal and type:
 
+[source,bash]
 ----
 dmesg|grep parport
 ----
@@ -242,6 +260,7 @@ and Add. Give it a name and put gnome-terminal in the command box.
 To find out what hardware is connected to your motherboard in a
 terminal window type:
 
+[source,bash]
 ----
 lspci -v
 ----
