--- a/docs/common/Stepper_Diagnostics.asciidoc
+++ b/docs/common/Stepper_Diagnostics.asciidoc
@@ -4,7 +4,7 @@
 :skip-front-matter:
 
 = Stepper Diagnostics
-
+:toc:
 [[cha:stepper-diagnostics]] (((Stepper Diagnostics)))
 
 If what you get is not what you expect many times you just got some
