--- a/docs/common/User_Concepts.asciidoc
+++ b/docs/common/User_Concepts.asciidoc
@@ -4,6 +4,7 @@
 :skip-front-matter:
 
 :imagesdir: /docs/common/images
+:source-highlighter: pygments
 
 = Important User Concepts
 :toc:
@@ -25,6 +26,7 @@ limits of your machinery.
 A G Code program can never be fully obeyed. For example, imagine you
 specify as a single-line program the following move:
 
+[source,bash]
 ----
 G1 X1 F10 (G1 is linear move, X1 is the destination, F10 is the speed)
 ----
