--- a/docs/documenting/updating-your-fork.asciidoc
+++ b/docs/documenting/updating-your-fork.asciidoc
@@ -14,38 +14,47 @@ merge your update.
 
 here's how to do that.
 
-- notice the message `This branch is 30 commits behind machinekit:master`? That's
-because changes have been done to the Machinekit website after I forked it, or
+=== Notice the message 
+
+`This branch is 30 commits behind machinekit:master`? 
+
+That's because changes have been done to the Machinekit website after I forked it, or
 after my last `PR`. In other words `machinekit:master` is more recent and I do
 not have the latest modifications.
 
-image::notice-fork-behind-master.png[]
+image::notice-fork-behind-master.png[height=400, width=700]
 
-- Pushing the green compare for pull-request button will give me following screen.
+=== Pushing the green compare for pull-request button 
+
+will give me following screen.
 Notice the original (purple) and forked (green) branch and the "switching the
 base" link:
 
-image::switch-base.png[]
+image::switch-base.png[height=400, width=700]
 
-- Follow the link and notice the repo's have been reversed.
+=== Follow the link and notice the repo's have been reversed.
 
-image::switched-base-with-PR.png[]
+image::switched-base-with-PR.png[height=400, width=700]
 
-- Create the `PR` by pushing the green button. This means you are going to do
+=== Create the *PR* by pushing the green button.
+
+This means you are going to do
 a `PR` to your own fork and get the changes from the original. Enter a
 descriptive commit message.
 
-image::merge-message-fork-update.png[]
+image::merge-message-fork-update.png[height=400, width=700]
 
-- Scroll down and create the `PR`. Then next thing you'll know you are at your
+=== Scroll down and create the *PR*. 
+
+Then next thing you'll know you are at your
 own fork, having a PR to confirm.
 
-image::merge-PR-message.png[]
+image::merge-PR-message.png[height=400, width=700]
 
-- Scroll down and "merge" this PR in your fork.
+=== Scroll down and "merge" this *PR* in your fork.
 
-image::merged-PR-and-updated-fork.png[]
+image::merged-PR-and-updated-fork.png[height=400, width=700]
 
 *Congratulations, you just updated your fork!*
 
-image::merge-and-update-fork.png[]
+image::merge-and-update-fork.png[height=400, width=700]
