--- a/docs/drivers/VFS11.asciidoc
+++ b/docs/drivers/VFS11.asciidoc
@@ -24,6 +24,7 @@ TCP-based devices or through a terminal server.
 Regardless of the connection type, vfs11_vfd operates as a Modbus master.
 
 This component is loaded using the halcmd "loadusr" command:
+[source]
 ----
 loadusr -Wn spindle-vfd vfs11_vfd -n spindle-vfd 
 ----
