--- a/docs/gui/image-to-gcode.asciidoc
+++ b/docs/gui/image-to-gcode.asciidoc
@@ -22,6 +22,7 @@ Add the following lines to the '[FILTER]'  section of your .ini file
 to make AXIS automatically invoke
 image-to-gcode when you open a .png, .gif, or .jpg image
 
+[source]
 ----
 PROGRAM_EXTENSION = .png,.gif,.jpg Grayscale Depth Image
 png = image-to-gcode
@@ -37,6 +38,7 @@ this way.
 Start image-to-gcode either by opening an image file in AXIS, or by
 invoking image-to-gcode from the terminal, as follows:
 
+[source]
 ----
 image-to-gcode torus.png > torus.ngc
 ----
