--- a/docs/gui/touchy.asciidoc
+++ b/docs/gui/touchy.asciidoc
@@ -103,6 +103,7 @@ Now, place the macro in a file named 'increment.ngc', in the
 
 It should look like:
 
+[source]
 ----
 O<increment> sub
 G91 G0 X#1 Y#2
