--- a/docs/hal/components.asciidoc
+++ b/docs/hal/components.asciidoc
@@ -17,6 +17,7 @@ From these two lists you know what components exist,
 and you can use 'man n name' to get additional information. 
 To view the information in the man page, in a terminal window type: 
 
+[source]
 ----
 man axis (or perhaps 'man 1 axis' if your system requires it.)
 ----
