--- a/docs/hal/halmodule.asciidoc
+++ b/docs/hal/halmodule.asciidoc
@@ -34,6 +34,7 @@ except KeyboardInterrupt:
 Copy the above listing into a file named "passthrough", make it
 executable ('chmod +x'), and place it on your '$PATH'. Then try it out:
 
+[source]
 ----
 halrun
 
@@ -74,6 +75,7 @@ microseconds, no matter what).
 
 == Create pins and parameters
 
+[source]
 ----
 h = hal.component("passthrough")
 ----
@@ -84,6 +86,7 @@ The component itself is created by a call to the constructor
 prefix used for pin and parameter names. If the prefix is not
 specified, the component name is used.
 
+[source]
 ----
 h.newpin("in", hal.HAL_FLOAT, hal.HAL_IN)
 ----
@@ -105,6 +108,7 @@ The full pin or parameter name is formed by joining the prefix and the
 suffix with a ".", so in the example the pin created is called
 'passthrough.in'.
 
+[source]
 ----
 h.ready()
 ----
@@ -122,6 +126,7 @@ current prefix can be retrieved by calling the '.getprefix()' method.
 For pins and parameters which are also proper Python identifiers, the
 value may be accessed or set using the attribute syntax:
 
+[source]
 ----
 h.out = h.in
 ----
@@ -129,6 +134,7 @@ h.out = h.in
 For all pins, whether or not they are also proper Python identifiers,
 the value may be accessed or set using the subscript syntax:
 
+[source]
 ----
 h['out'] = h['in']
 ----
