--- a/docs/hal/haltcl.asciidoc
+++ b/docs/hal/haltcl.asciidoc
@@ -20,11 +20,12 @@ ini files.  Haltcl files are identified in the the HAL section of ini files
 (just like .hal files).
 
 .Example
+[source]
 ----
 [HAL]
 HALFILE = conventional_file.hal
 HALFILE = tcl_based_file.tcl
------
+----
 
 With appropriate care, .hal and .tcl files can be intermixed.
 
@@ -60,7 +61,7 @@ commands must be preceded with the keyword 'hal'.
 
 ....
 halcmd   haltcl
-------   ------
+
 gets     hal gets
 list     hal list
 ....
@@ -74,6 +75,7 @@ differing syntax.
 Machinekit ini files use SECTION and ITEM specifiers to identify
 configuration items.
 
+[source]
 ----
 [SECTION_A]
 ITEM1 = value_1
@@ -86,6 +88,7 @@ ITEM2 = value_2
 The ini file values are accessible by text substition in .hal files using the
 form.
 
+[source]
 ----
 [SECTION]ITEM
 ----
@@ -93,12 +96,14 @@ form.
 The same ini file values are accessible in .tcl files using the form of a tcl
 global array variable.
 
+[source]
 ----
 $::SECTION(ITEM)
 ----
 
 For example, an ini file item like:
 
+[source]
 ----
 [AXIS_0]
 MAX_VELOCITY = 4
@@ -113,6 +118,7 @@ Existing .hal files can be converted to .tcl files by hand editing to adapt to
 the differences mentioned above.  The process can be automated with scripts
 that convert using these substitutions.
 
+[source]
 ----
 [SECTION]ITEM ---> $::SECTION(ITEM)
 gets          ---> hal gets
@@ -125,6 +131,7 @@ In haltcl, the value argument for the 'sets' and 'setp' commands
 is implicitly treated as an expression in the tcl language. 
 
 .Example
+[source]
 ----
 # set gain to convert deg/sec to units/min for AXIS_0 radius
 setp scale.0.gain 6.28/360.0*$::AXIS_0(radius)*60.0
@@ -133,6 +140,7 @@ setp scale.0.gain 6.28/360.0*$::AXIS_0(radius)*60.0
 Whitespace in the bare expression is not allowed, use quotes
 for that:
 
+[source]
 ----
 setp scale.0.gain "6.28 / 360.0 * $::AXIS_0(radius) * 60.0"
 ----
@@ -141,6 +149,7 @@ In other contexts, such as 'loadrt', you must explicitly use
 the tcl expr command ([expr {}]) for computational expressions.
 
 .Example
+[source]
 ----
 loadrt motion base_period=[expr {500000000/$::TRAJ(MAX_PULSE_RATE)}]
 ----
@@ -152,6 +161,7 @@ acceleration constraint that is "a bit higher" than the one used by the motion
 planner.  So, when using halcmd files, we force inifiles to have a manually
 calculated value.
 
+[source]
 ----
 [AXIS_0]
 MAXACCEL = 10.0
@@ -161,6 +171,7 @@ STEPGEN_MAXACCEL = 10.5
 With haltcl, you can use tcl commands to do the computation and
 eliminate the STEPGEN_MAXACCEL inifile item altogether.
 
+[source]
 ----
 setp stepgen.0.maxaccel $::AXIS_0(MAXACCEL)*1.05
 ----
@@ -170,6 +181,7 @@ configurations use "core_sim.hal" or "core_sim9.hal" hal files.  These differ
 because of the requirement to connect more or fewer axes.  The following haltcl
 code would work for any combination of axes in a trivkins machine.
 
+[source]
 ----
 # Create position, velocity and acceleration signals for each axis
 set ddt 0
@@ -197,6 +209,7 @@ haltcl can be run interaactively as a tcl interpreter.  This
 capability is useful for testing and for standalone hal applications.
 
 .Example
+[source]
 ----
 $ halrun -T haltclfile.tcl
 ----
