--- a/docs/hal/pyvcp.asciidoc
+++ b/docs/hal/pyvcp.asciidoc
@@ -1,4 +1,7 @@
-
+---
+---
+    
+:skip-front-matter:
 :imagesdir: hal/images
 
 = Python Virtual Control Panel
@@ -62,6 +65,7 @@ reference below.
 Once you have created your panel, connecting HAL signals to and from
 the PyVCP pins is done with the halcmd:
 
+[source]
 -----------------------------------------------------------------------
 net <signal-name> <pin-name> <opt-direction> <opt-pin-name>signal-name  
 -----------------------------------------------------------------------
@@ -107,6 +111,7 @@ for all options). To make AXIS aware of this file, and call it at start
 up, we need to specify the following in the [DISPLAY] section of the
 .ini file:
 
+[source]
 -----------------------------
 PYVCP = spindle.xml
 -----------------------------
@@ -116,6 +121,7 @@ hooked up to the appropriate HAL signal. A .hal file that will be run
 once AXIS and PyVCP have started can be specified in the [HAL] section
 of the .ini file:
 
+[source]
 ---------------------------------------
 POSTGUI_HALFILE = spindle_to_pyvcp.hal
 ---------------------------------------
@@ -124,6 +130,7 @@ This change will run the HAL commands specified in
 'spindle_to_pyvcp.hal'. In our example the contents could look like
 this:
 
+[source]
 -------------------------------------------------
 net spindle-rpm-filtered  => pyvcp.spindle-speed
 -------------------------------------------------
@@ -144,6 +151,7 @@ with or without Machinekit's machine controller.
 
 To load a stand alone PyVCP panel with Machinekit use these commands:
 
+[source]
 -----------------------------------------------------------------------
 loadusr -Wn mypanel pyvcp -g WxH+X+Y -c mypanel <path/>panel_file.xml 
 -----------------------------------------------------------------------
@@ -179,12 +187,14 @@ GUI other than AXIS.
 
 To load a 'stand alone' PyVCP panel without Machinekit use this command:
 
+[source]
 -----------------------------------------------------------------------
 loadusr -Wn mypanel pyvcp -g 250x500+800+0 -c mypanel mypanel.xml 
 -----------------------------------------------------------------------
 
 The minimum command to load a pyvcp panel is:
 
+[source]
 -----------------------------
 loadusr pyvcp mypanel.xml
 -----------------------------
@@ -208,6 +218,7 @@ An optional command to use if you want the panel to stop HAL from
 continuing commands / shutting down. After loading any other components
 you want the last HAL command to be:
 
+[source]
 -----------------------------
 waituser panelname
 -----------------------------
