--- a/docs/ladder/ladder_examples.asciidoc
+++ b/docs/ladder/ladder_examples.asciidoc
@@ -6,7 +6,7 @@
 :imagesdir: /docs/ladder/images
 
 = Classicladder Examples
-
+:toc:
 [[cha:classicladder-examples]] (((Classicladder Examples)))
 
 == Wrapping Counter
@@ -53,6 +53,7 @@ First we have to open the E-Stop loop in the main HAL file by
 commenting out by adding the pound sign as shown or removing the
 following lines.
 
+[source]
 ----
 # net estop-out <= iocontrol.0.user-enable-out 
 # net estop-out => iocontrol.0.emc-enable-in
@@ -61,6 +62,7 @@ following lines.
 Next we add Classic Ladder to our custom.hal file by adding these two
 lines:
 
+[source]
 ----
 loadrt classicladder_rt 
 addf classicladder.0.refresh servo-thread
@@ -77,6 +79,7 @@ estop.clp
 
 Now add the following line to your custom.hal file.
 
+[source]
 ----
 # Load the ladder 
 loadusr classicladder --nogui estop.clp
@@ -94,6 +97,7 @@ I/O assignments
 
 Next we add the following lines to the custom_postgui.hal file
 
+[source]
 ----
 # E-Stop example using pyVCP buttons to simulate external components
 
